--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.1",
     "@types/node": "20.12.7",
     "@types/react": "18.2.78",
     "@types/react-dom": "18.2.25",
     "autoprefixer": "10.4.19",
+    "clsx": "^2.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.1",
     "framer-motion": "^11.0.28",
@@ -20,7 +22,13 @@
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.8.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
+  },
+  "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.6"
   }
 }
